Bug 36838 - soffice/oosplash.bin does not process relative paths to documents
Summary: soffice/oosplash.bin does not process relative paths to documents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.0 Beta3
Hardware: All Linux (All)
: medium critical
Assignee: Michael Meeks
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mab3.4
  Show dependency treegraph
 
Reported: 2011-05-04 05:33 UTC by Petr Mladek
Modified: 2011-05-04 12:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Mladek 2011-05-04 05:33:32 UTC
I am unable to open documents using relative paths and soffice wrapper:

The following command:

    ~/Documents> /opt/libreoffice/program/soffice test.odt

shows window with error message:

    /opt/libreoffice/basis3.4/program/test.odt does not exist


Note that the document exitst:

    ~/Documents> ll test.odt
    -rw-r--r-- 1 pmladek users 12760 2008-11-10 20:32 test.odt
    ~/Documents> pwd
    /home/pmladek/Documents


I guess that it is related to the oosplash.bin wrapper.
Comment 1 Petr Mladek 2011-05-04 05:36:07 UTC
Michael, could you please have a look? I think that Kendy somehow has solved this in the older implementation for Go-oo long time ago.
Comment 2 Michael Meeks 2011-05-04 11:16:47 UTC
sure; in progress ...
Comment 3 Michael Meeks 2011-05-04 11:28:20 UTC
this is down to 'pagein' calling a chdir that was not expected - what an odd piece of code; I need to hack the arguments up to not do that; by avoiding a -L parameter; should be easy enough.
Comment 4 Michael Meeks 2011-05-04 12:31:43 UTC
fixed and pushed to libreoffice-3-4.