fix fdo#36838 by avoiding -L argument to pagein